# app.js
@@ -21,7 +21,7 @@ app.use(cors());
 // Routes which should handle requests
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument)); //still working on it
 app.use("/product", productRoute);
-app.use("/cate", categoryRoute);
+app.use("/category", categoryRoute);
 app.use("/cart", cartRoute);
 app.use("/admin", adminRoute);
 app.use("/user", userRoute);
